# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.254 2005/04/29 21:31:32 rocket Exp $

  29 Apr 2005; Eric Edgar <rocket@gentoo.org>
  targets/stage1/stage1-chroot.sh, targets/stage1/stage1-preclean-chroot.sh:
  Remove using gcc-config to set things up as we should all be using 2005.0
  seed stages now.

  29 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/livecd-stage2_template.spec:
  Added livecd/users to example livecd-stage2 spec file.

  29 Apr 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/livecdfs-update.sh:
  Change default hostnames for livecds

  29 Apr 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/bootloader-setup.sh, targets/support/livecdfs-update.sh:
  Fix /etc/hosts aliases for catalyst-livecd and work on help menu for grub
  bootloading

  29 Apr 2005; Eric Edgar <rocket@gentoo.org>
  modules/livecd_stage2_target.py:
  Clear autoresume flags when build is done

  29 Apr 2005; Eric Edgar <rocket@gentoo.org>
  modules/livecd_stage2_target.py, targets/support/bootloader-setup.sh,
  targets/support/create-iso.sh:
  Fix isolinux so that it finds menus and kernels and stuff

  28 Apr 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Make purge operation a little less chatty, removed print statements

  28 Apr 2005; Eric Edgar <rocket@gentoo.org>
  livecd/cdtar/isolinux-2.13-cdtar.tar.bz2,
  livecd/cdtar/isolinux-2.13-memtest86+-cdtar.tar.bz2:
  updated isolinux-2.13 cdtars to have files under boot/ rather than isolinux/

  28 Apr 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, modules/livecd_stage2_target.py:
  print warning message about deprecated use of cdfstype

  28 Apr 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/chroot-functions.sh:
  statically define genkernel location to eliminate which command failure if
  genkernel is not installed
