@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/livecd_stage2_target.py,v 1.41 2005/04/29 13:51:39 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/livecd_stage2_target.py,v 1.42 2005/05/03 14:58:52 rocket Exp $
 
 """
 Builder class for a LiveCD stage2 build.
@@ -25,12 +25,11 @@ class livecd_stage2_target(generic_stage_target):
 			"gamecd/conf","livecd/users","portage_overlay","livecd/cdfstype"])
 		
 		generic_stage_target.__init__(self,spec,addlargs)
-	
 		if not self.settings.has_key("livecd/type"):
 		    self.settings["livecd/type"] = "generic-livecd"
 
 		file_locate(self.settings, ["cdtar","controller_file"])
-		
+	
 	def set_source_path(self):
 	    self.settings["source_path"]=self.settings["storedir"]+"/builds/"+self.settings["source_subpath"]+".tar.bz2"
 	    if os.path.isfile(self.settings["source_path"]):
